# Django-Studybudy

./: .env.sample  .gitignore  .pre-commit-config.yaml  Get-Started.html  README.md  build.sh  docker-compose.dev.yml  doctave.yaml  download_htmx.py  examples.html  index.html  makefile  manage.py  mydb.sqlite3  nixpacks.toml  package.json  pyproject.toml  requirements.txt  search_index.json  tailwind.config.js  test.html  vercel.json  vite.config.js
.github/workflows/: deploy-docs.yml  docs.yml  pr.yml
MyDjango/: settings.py  urls.py
accounts/: admin.py  apps.py  factory.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_alter_user_options_alter_user_managers_and_more.py  0004_alter_user_managers.py  0005_alter_user_avatar.py  0006_alter_user_managers.py
assets/: doctave-style.css
base/: admin.py  context_processors.py  factory.py  forms.py  models.py  urls.py  views.py
base/api/: serializers.py
base/migrations/: 0001_initial.py  0002_alter_room_slug_alter_topic_slug.py  0002_topic_rename_create_room_created_room_host_message_and_more.py  0002_user_avatar.py  0003_alter_room_options_room_participants.py  0003_message_deleted_at_message_is_deleted_and_more.py  0003_topic_description_topic_github_url_alter_user_avatar.py  0004_alter_message_options.py  0004_room_slug_topic_created_topic_slug_topic_updated_and_more.py  0004_room_type.py  0005_alter_room_slug_alter_topic_slug.py  0005_alter_room_type_roominvitation.py  0006_reactiontype_reaction.py  0007_message_parent.py  0008_alter_message_parent.py  0009_alter_message_body.py  0010_remove_room_participants_alter_room_host_membership_and_more.py  0011_rename_invitee_id_roominvitation_invitee_and_more.py  0012_membership_is_blocked_room_is_archived.py  0013_membership_blocked_at_reaction_created_and_more.py  0014_alter_message_options.py
base/templatetags/: markdown_extras.py
base/tests/: test_views.py
core/: settings.py  urls.py
core/settings/: base.py  local.py  production.py
docker/: Dockerfile.npm  Dockerfile.python
docs/: Get-Started.md  README.md  examples.md
docs/_include/: _head.html
scripts/: build_files.sh  entrypoint.sh
src/: package-lock.json  package.json  vite.config.js
src/accounts/: admin.py  apps.py  factory.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
src/base/: admin.py  factory.py  forms.py  urls.py
src/core/: wsgi.py
src/templates/: main.html  main_email.css  main_email.html  test_emails.html
static/: package-lock.json  package.json  tailwind.config.js
static/data/: topics.csv  users.csv
static/js/: main.js  script.js
static/styles/: main.css  markdown.css  style.css  tailwind.css
templates/: main.html  main_email.html  navbar.html
templates/account/: account_inactive.html  email.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
templates/admin/: csv_upload.html
(+140 files in other folders)
